plugins {
    id 'org.springframework.boot' version '2.5.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}
targetCompatibility = JavaVersion.VERSION_17

group = 'com.maciej.poreba'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "17"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation("org.springframework.boot:spring-boot-starter-validation:2.6.3")
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'org.springframework.security:spring-security-core:5.5.2'
    implementation 'org.springframework.security:spring-security-config:5.5.2'
    implementation 'org.springframework.security:spring-security-web:5.5.2'
    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.5.5'
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.springframework:spring-webflux:5.3.11'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.5'
    testImplementation "org.awaitility:awaitility:3.0.0"


    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'


}

test {
    useJUnitPlatform()
}
